recursion.cons.last.Last.scala.error
Erreur de compilation :
Last:3: error: not found: value size
  if (size(l)==1) {
      ^