recursion.cons.last.Last.scala.code
def last(l:List[Int]): Int = {
  if (size(l)==1) {
    return l.head
  } else {
    return last(l.tail)
  }
}